--- a/src/markdown/blog/anti-dilution-provisions.mdx
+++ b/src/markdown/blog/anti-dilution-provisions.mdx
@@ -117,11 +117,13 @@ There are a couple of things to consider here but perhaps the most important one
 
 Here’s how you can include and track anti-dilution provisions with Ledgy. Create or edit a share class and assign it any of the above-mentioned options and click save. Now Ledgy will take this into account whenever you’re preparing for a new round.
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/SRfLd0_7T2k?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="text-center mt-5">
 
-<br/>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SRfLd0_7T2k?rel=0" frameborder="0" class="ml-auto" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen />
 
 **Try the [demo](https://demo.ledgy.com) and see for yourself!**
+
+</div>
 
 In the coming releases, we’ll even make it possible for you to model your financing rounds and exit with automatic anti-dilution calculation and you’ll get to see the difference in “payout” based on terms in your term sheet!
 
