Change euro signs in text and img.

--- a/src/markdown/blog/anti-dilution-provisions.mdx
+++ b/src/markdown/blog/anti-dilution-provisions.mdx
@@ -27,14 +27,15 @@ During any investment, VCs and angel investors usually demand “special treatme
 Investment rounds ideally increase the valuation of the company, meaning the pre-money valuation for each subsequent round is higher than the previous round. More rounds equals more investors, which means more people have to share the same pie. As long as the valuation of the company rises, investors usually don’t mind the decrease in ownership, because the increase in valuation raises the value of the stock they’re holding.
 
 
->*If an investor owned 10% of a company valued at €5m and after additional financing rounds ends up owning only 5% of a company but it’s now valued at €25m, the money they invested increased in value from 500,000€ to 1,250,000€.*
+>*If an investor owned 10% of a company valued at €5m and after additional financing rounds ends up owning only 5% of a company but it’s now valued at €25m, the money they invested increased in value from €500,000 to 1,250,000.*
 
 
 But in the event that the company raises additional funds at a lower valuation than in the previous round, investors like to be protected.
 Here’s an example of why investors want protection in the term sheet:
 
 
->*If you close a series A round of €1m at a pre-money valuation of €7m, the post-money valuation will be €8m. Now the investor owns 12,5% (€1m/€8m) of the company shares. If you raise a second round of €3m but can only get pre-money valuation of €6m, the first investor essentially lost 25% of the original investment.
+>*If you close a series A round of €1m at a pre-money valuation of €7m, the post-money valuation will be €8m. Now the investor owns 12,5% (€1m/€8m) of the company shares. If you raise a second round of €3m but can only get pre-money valuation of €6m, the first investor essentially lost 25% of the original investment.*
+
 $$
 \text{€8m} - \text{€6m} = \text{€2m}
 $$
@@ -49,14 +50,14 @@ To prevent this from happening, investors like to negotiate a clause called “A
 
 ##### 2. Types of Anti-Dilution Provisions
 
-Besides anti-dilution provisions, a term-sheet includes concepts such as conversion rights, participating preferred stock, liquidation preference, etc. We’ll get into that later, for now, it’s important to know that investor’s usually negotiate **preferred stock** for themselves and it can **convert** to common stock via **conversion price**. In the beginning, the conversion price equals the price per share from their round (invested €1m, price per share 1€, investor receives 1M shares) but in the event of a down-round, it can change. Anti-dilution provisions protect investors by **adjusting the price at which the investors preferred stock converts into common stock**, effectively increasing the amount of common stock they own.
+Besides anti-dilution provisions, a term-sheet includes concepts such as conversion rights, participating preferred stock, liquidation preference, etc. We’ll get into that later, for now, it’s important to know that investor’s usually negotiate **preferred stock** for themselves and it can **convert** to common stock via **conversion price**. In the beginning, the conversion price equals the price per share from their round (invested €1m, price per share €1, investor receives 1m shares) but in the event of a down-round, it can change. Anti-dilution provisions protect investors by **adjusting the price at which the investors preferred stock converts into common stock**, effectively increasing the amount of common stock they own.
 The most commonly used types of anti-dilution are full ratchet and weighted average (broad or narrow). The first is better for investors, the second is more founder friendly.
 
 ###### Full Ratchet
 
 In the case of a full ratchet anti-dilution, investors get to retain almost the same percentage of your company from before the down-round. For that to be possible, the conversion price for preferred shares in the down-round has to be adjusted.
 
->*For example, if an investor in the series A paid 2€ per share and the series B investor paid only 1€ per share, the series A investor can convert his shares at the new price of 1€. This means series A investor’s each preffered share now converts to 2 common shares.*
+>*For example, if an investor in the series A paid €2 per share and the series B investor paid only €1 per share, the series A investor can convert his shares at the new price of €1. This means series A investor’s each preffered share now converts to 2 common shares.*
 
 Even though many investors seek down-round protection, full ratchet isn’t very common in practice and is only beneficial for the investor.
 
@@ -67,12 +68,12 @@ The next type is a little different. It’s not meant to recuperate all of early
 
 The difference between these two and full ratchet is in how the new conversion price is determined. We saw that in the full ratchet situation new conversion price equals the down-round’s conversion price, but here we have to calculate a new conversion price for existing investors. This is done with the same formula for both broad and narrow weighted average. The formula takes into account **how many** and at **what price** were new shares issued, and not just the price.
 
-We are trying to calculate the new price per share that will compensate series A investors. We can expect a new price to be somewhere between the series A price and the price offered in the down-round. In this case between 2€ and 1€, which will result in the series A investor receiving more shares as compensation, for no additional investment.
+We are trying to calculate the new price per share that will compensate series A investors. We can expect a new price to be somewhere between the series A price and the price offered in the down-round. In this case between €2 and €1, which will result in the series A investor receiving more shares as compensation, for no additional investment.
 
 **Example:**
 
 
->*Let’s assume a company has 1,000,000 common shares outstanding and in their series A round, the company issues 1,000,000 shares of preferred stock for the price of 2€ per share. The series A preferred stock is convertible to common at a 1:1 ratio and for a conversion price of 2€. Then in series B they issue another 1,000,000 shares at only 1€ per share.*
+>*Let’s assume a company has 1,000,000 common shares outstanding and in their series A round, the company issues 1,000,000 shares of preferred stock for the price of €2 per share. The series A preferred stock is convertible to common at a 1:1 ratio and for a conversion price of €2. Then in series B they issue another 1,000,000 shares at only €1 per share.*
 >*Now comes the time to calculate the new conversion price to compensate the series A investor.*
 <Img src="Formula1.png" size="350" />
 
