Add Jahlela's improvements

--- a/src/markdown/blog/anti-dilution-provisions.mdx
+++ b/src/markdown/blog/anti-dilution-provisions.mdx
@@ -2,7 +2,7 @@
 date: "2019-07-11"
 author: "spela"
 title: "Anti-Dilution Provisions: Which One Is Better for Founders?"
-description: "During any investment, VCs and angel investors usually demand “special treatment”, reserved just for them."
+description: "During any investment, some of the integral parts of negotiations are provisions that protect investors from dilution in subsequent financing rounds."
 coverImage: anti-dilution-provisions/coverImg.jpg
 images:
   - anti-dilution-provisions/Formula1.png
@@ -11,7 +11,7 @@ images:
 ---
 
 
-During any investment, one of the integral parts of negotiations are provisions that protect investors from dilution in subsequent financing rounds. As important as provisions are to investors, they can also have an unfavorable impact on the ownership of founders and employees.
+During any investment, some of the integral parts of negotiations are provisions that protect investors from dilution in subsequent financing rounds. As important as provisions are to investors, they can also have an unfavorable impact on founder and employee ownership.
 
 **Table of Contents**
 
@@ -28,58 +28,61 @@ Investment rounds ideally increase the valuation of the company, meaning the pre
 
 
 
->*Let’s look at an example of an investor who owns 10% of a company valued at €5m. After additional financing rounds she ends up owning only 5% of the company.  Nevertheless, now the company is valued at €25m, so the money she invested increased in value from €500,000 to €1,250,000.*
+
+>*Let’s look at an example of an investor who owns 10% of a company valued at €5m. After additional financing rounds she ends up owning only 5% of the company. Nevertheless, now the company is valued at €25m, so the money she invested increased in value from €500,000 to €1,250,000.*
 
 
 However, in the event of a down-round, in which the company valuation decreases, investors like to be protected. Here’s an example of why investors want protection in the term sheet.
 
 
->*If you close a series A round of €1m at a pre-money valuation of €7m, the post-money valuation will be €8m. Let’s assume the investor now owns 12,5% (€1m/€8m) of the company shares. If you later raise a series B round of €3m but can only get a pre-money valuation of €6m, the series A investor essentially lost 25% of the original investment.*
+>*If you close a series A round of €1m at a pre-money valuation of €7m, the post-money valuation will be €8m (€7m + €1m = €8m). Let’s assume that the investor now owns 12.5% (€1m / €8m) of the company shares. If you later raise a series B round of €3m but can only get a pre-money valuation of €6m, the series A investor essentially lost 25% of the original investment.*
 
 $$
 \text{€8m} - \text{€6m} = \text{€2m}
 $$
 $$
-\frac{\text{€2m}}{\text{€8m}} = 0,25
+\frac{\text{€2m}}{\text{€8m}} = 0.25
 $$
 
 
 
-Another reason why dilution matters to investors, is in the **voting power and control of the company**. In most cases, control and voting power are tied to the amount and type of shares held by a given shareholder. Investors and even founders can find themselves outnumbered if their ownership in the company is diluted. To prevent this from happening, investors like to negotiate a clause called “Anti-Dilution Provisions”
-Last but not least, be aware that a very common and fair possibility is to have no anti-dilution protections at all. When we, at Ledgy, were raising our seed round, we did not use any anti-dilution protections in the contract at all. This means that the investors’ stock is treated similarly to common shareholders' stock and  undergoes the same rate of dilution in the event of a down-round. From the founders and other common shareholders' perspective, this is a very fair option. However, if your investors require anti-dilution protection, continue reading to learn about the different types.
+Another reason why dilution matters to investors is in the **voting power and control** of the company. In most cases, control and voting power are tied to the amount and type of shares held by a given shareholder. Investors and even founders can find themselves outnumbered if their ownership in the company is diluted. To prevent this from happening, investors like to negotiate a clause called “Anti-Dilution Provisions”.
+
+Last but not least, be aware that a very common and fair possibility is to have **no anti-dilution protections** at all. When we, at Ledgy, were raising our seed round, we did not use any anti-dilution protections in the contract. This means that the investors’ stock is treated similarly to common shareholders' stock and undergoes the same rate of dilution in the event of a down-round. From the founders and other common shareholders' perspective, this is a very fair option. However, if your investors require anti-dilution protection, continue reading to learn about the different types.
 
 
 ##### 2. Types of Anti-Dilution Provisions
 
-Usually, in a financing round, investors buy so-called **“preferred stock”**. Why is it called preferred stock? There is a special right attached to it, for example liquidation preference. In the event of an exit, the holders of preferred stock will get their money back first. In case they choose not to use this right, they can simply convert their preferred stock to common via a conversion price. Normally, the conversion price equals the price per share of the common stock from their round (invested €1m, price per share of common stock €1, investor receives 1M shares) but in the event of a down-round, this can change.
-Anti-dilution provisions protect investors by adjusting the price at which the investors’ preferred stock converts into common stock, effectively increasing the amount of common stock they are entitled to received in the event of an exit. The most commonly used types of anti-dilution are full ratchet and weighted average (broad or narrow). The first is better for investors, the second is more founder-friendly.
+Usually, in a financing round, investors buy so-called “preferred stock”. It's called preferred because there is a special right attached to it – for example, liquidation preference. In the event of an exit, the holders of preferred stock will get their money back first. In case they choose not to use this right, they can simply convert their preferred stock to common via a conversion price.
+
+Normally, the conversion price equals the price per share of the common stock from their round. For example, if they invested €1m when the price per share of common stock was €1, the investor would receive 1m shares. However, in the event of a down-round, this can change. Anti-dilution provisions protect investors by adjusting the price at which the investors’ preferred stock converts into common stock. This effectively increases the amount of common stock they are entitled to receive in the event of an exit. The most commonly used types of anti-dilution are full ratchet and weighted average (broad or narrow). The first is better for investors, the second is more founder-friendly.
+
 
 
 ###### Full Ratchet
 
-In the case of a full ratchet anti-dilution, investors get to retain almost the same percentage of your company as from before the down-round. For that to be possible, the conversion price for the investors’ preferred shares has to be adjusted.
+In the case of a full ratchet anti-dilution, investors get to retain almost the same percentage of your company as before the down-round. For that to be possible, the conversion price for the investors’ preferred shares has to be adjusted.
 
->*For example, if an investor in the series A paid €2 per share and the series B investors paid only €1 per share, the series A investor has the right to convert his shares at the new price of €1, given that he had a full ratchet protection. This means that each preferred share of series A investors now converts to 2 common shares instead of only 1.*
->*Important to note here: the series A investor does not pay for these new shares he’s entitled to receive!.*
+>*For example, if investors in series A paid €2 per share and series B investors paid only €1 per share, the series A investors have the right to convert their shares at the new price of €1, given that they had full-ratchet protection. This means that each preferred share the series A investor holds now converts to 2 common shares, instead of only 1. Important to note here: the series A investor does not pay for these new shares he’s entitled to receive!*
 
-Even though many investors seek down-round protection, full ratchet isn’t very common in practice and is only beneficial for the investor.
+Even though many investors seek down-round protection, full ratchet isn’t very common in practice, and is only beneficial for the investor.
 
 ###### Weighted Average
 
 
-The next type is a little different. It’s not meant to recuperate all of early investors’ losses but rather act as **compensation**. There are two ways of calculating it: **“broad-based weighted average”** and **“narrow-based weighted average”**.
+The next type is a little different. It’s not meant to recuperate all of early investors’ losses but rather to act as **compensation**. There are two ways of calculating it: **“broad-based weighted average”** and **“narrow-based weighted average”**.
 
-We saw previously that in the full ratchet situation the conversion price equals the down-round’s conversion price, but here we have to calculate a different conversion price for existing investors. This is done with the same formula for both broad and narrow weighted average. The formula takes into account the number and the price of the new shares issued in the down-round.
+We saw previously that in the full ratchet situation the conversion price equals the down-round’s conversion price, but here we have to calculate a different conversion price for existing investors. This is done with the same formula for both broad and narrow weighted average. The formula takes into account the **number** and the **price** of the new shares issued in the down-round.
 
-We are trying to calculate the new price per share that will compensate series A investors. We can expect the new price to be somewhere between the series A price and the price offered in the down-round. In this case between €2 and €1, which will result in the series A investors receiving more common shares as compensation.
+Here, we are trying to calculate the new price per share that will compensate series A investors. We can expect the new price to be somewhere between the series A price and the price offered in the down-round. In this case between €2 and €1. This will result in the series A investors receiving more common shares as compensation.
 
 
 **Example:**
 
 
->*Let’s assume a company has 1,000,000 common shares outstanding and in their series A round, the company issues 1,000,000 shares of preferred stock for the price of €2 per share.*
->*The series A preferred stock is convertible to common at a 1:1 ratio for a conversion price of €2 and the total common stock outstanding before series B is of 2,000,000.*
->*Then in series B the company issues another 1,000,000 shares at only €1 per share.*
+>*Let’s assume a company has 1,000,000 common shares outstanding, and in their series A round, the company issues 1,000,000 shares of preferred stock for the price of €2 per share.*
+>*The series A preferred stock is convertible to common stock at a 1:1 ratio, for a conversion price of €2. Thus, the total common stock outstanding before series B is 2,000,000.*
+>*Then, in series B, the company issues another 1,000,000 shares at only €1 per share.*
 
 >*Now comes the time to calculate the new conversion price to compensate the series A investor.*
 <Img src="Formula1.png" size="350" />
@@ -88,26 +91,27 @@ We are trying to calculate the new price per share that will compensate series A
 
 
 
->*The next step to get the actual amount of common stock that the series A investor will end up with, we have to multiply the number of shares they have from their round with the conversion rate caused by the down-round. The conversion rate is calculated by dividing the old conversion price (series A price) with the new conversion price.*
+>*To get the actual amount of common stock that the series A investors will ultimately hold, we have to multiply the number of shares they have from their round by the conversion rate caused by the down-round. The conversion rate is calculated by dividing the old conversion price (series A price) by the new conversion price.*
 <Img src="Formula2.png" size="220" />
 
 
->*The last step is to multiply the amount of shares the series A investor got in the series A with the conversion rate. This is now the number of common shares the investor from series A owns, (after converting his preferred shares to common.*
+>*The last step is to multiply the amount of shares the series A investor received in the series A round by the conversion rate. After converting his preferred shares to common shares, this will represent the  number of common shares the series A investor owns.*
 <Img src="Formula3.png" size="300" />
 
 
 
 
->*The previous investor gets compensated for a down-round with additional common shares, in this case, 200,000.*
+>*The previous investor will be compensated for a down-round with additional common shares. In this case, 200,000 common shares.*
 
 
 ##### 3. Broad-Based vs Narrow-Based Formula (And Which One Is Better for Founders)
 
-The difference between the two is in how the **“common stock outstanding”** part of the formula is calculated. We can already tell from the name that the broad-based weighted average is going to include a broader range of stock in this variable. **Broad-based** weighted average provision includes:
+The difference between the two is in how the **“common stock outstanding”** part of the formula is calculated. We can already tell from the name that the broad-based weighted average is going to include a broader range of stock. **Broad-based** weighted average provision includes:
 - The company’s common stock outstanding (this includes all common stock issuable upon conversion of its preferred stock)
 - Common stock if all other options, rights, and securities were converted (including employee options), also called “fully diluted”.
 
-**Narrow-based** weighted average includes **only currently outstanding** securities. What you probably want to know is, what kind of effect each of these has on share allocation. Since the broad-based formula includes more shares in the CSO (common stock outstanding) part of the formula, that results in less anti-dilution compensation given (better for the founder). On the other hand, the narrow-based formula provides a greater amount of stock to be issued to holders of preferred stock, costing the founders more in terms of ownership.
+**Narrow-based** weighted average includes **only currently outstanding** (not fully diluted) securities. What you probably want to know is: What kind of effect does each of these have on share allocation? Since the broad-based formula includes more shares in the CSO (common stock outstanding) part of the formula, this results in less anti-dilution compensation given (better for the founder). On the other hand, the narrow-based formula provides a greater amount of stock to be issued to holders of preferred stock, costing the founders more in terms of ownership.
+
 
 For those of you, who’d like to test the difference between broad-based and narrow-based CSO count yourselves, try using numbers below in the first (NCP) formula and observe the result.
 - Broad-based; CSO = 20,000,000
@@ -115,7 +119,7 @@ For those of you, who’d like to test the difference between broad-based and na
 
 **NOTE: All stock amounts in the formulas are common shares and not preferred shares!**
 
-As written above, there are a couple of things to consider here but perhaps the most important one has to do with the survival of the company. If the company lost value but needs additional funds to recover, do investors really want the founders to live in fear of losing a significant amount of ownership? All in all the best option for founders is no anti-dilution protection, but weighted average is still a much better option than full ratchet, while still protecting early investors.
+As written above, there are a couple of things to consider here, but perhaps the most important one has to do with the survival of the company. If the company lost value but needs additional funds to recover, do investors really want the founders to live in fear of losing a significant amount of ownership? All in all, the best option for founders is no anti-dilution protection, but weighted average is still a much better option than full ratchet, while still protecting early investors.
 
 
 ##### 5. How to Use Anti-Dilution Provisions in Ledgy?
@@ -130,7 +134,7 @@ Here’s how you can include and track anti-dilution provisions with Ledgy. Crea
 
 </div>
 
-In the coming releases, we’ll even make it possible for you to model your financing rounds and exit with automatic anti-dilution calculation and you’ll get to see the difference in “payout” based on terms in your term sheet!
+In the coming releases, we’ll even make it possible for you to model your financing rounds and exit with automatic anti-dilution calculation, and you’ll get to see the difference in “payout” based on terms in your term sheet!
 
 **Useful Resources:**
 
