Add links to resources

--- a/src/markdown/blog/anti-dilution-provisions.mdx
+++ b/src/markdown/blog/anti-dilution-provisions.mdx
@@ -139,8 +139,8 @@ In the coming releases, we’ll even make it possible for you to model your fina
 **Useful Resources:**
 
 - Woronoff, Michael and Rosen, Jonathan, "Understanding Anti-dilution Provisions in Convertible Securities" 74 Fordham Law Review,129 (2005)
-- Colla, Derek. “What you need to know about down-round financings”. Cooley Go  https://www.cooleygo.com/down-round-financings/
-- Riggs, Casey.” Venture Capital Term Sheet Negotiation — Part 7: Anti-dilution Provisions”, 8 March 2014, Strictly business law blog https://www.strictlybusinesslawblog.com/2014/03/08/venture-capital-term-sheet-negotiation-part-7-anti-dilution-provisions/
+- Colla, Derek.  [“What you need to know about down-round financings”] (https://www.cooleygo.com/down-round-financings/). Cooley Go
+- Riggs, Casey. [“Venture Capital Term Sheet Negotiation — Part 7: Anti-dilution Provisions”](https://www.strictlybusinesslawblog.com/2014/03/08/venture-capital-term-sheet-negotiation-part-7-anti-dilution-provisions/), 8 March 2014, Strictly business law blog
 
 
 
