--- a/src/locale/de/messages.po
+++ b/src/locale/de/messages.po
@@ -204,7 +204,7 @@ msgstr "Blockchain-Notar"
 
 #: src/layouts/index.jsx:60
 #: src/layouts/index.jsx:108
-#: src/layouts/index.jsx:192
+#: src/layouts/index.jsx:182
 #: src/pages/blog.jsx:13
 msgid "Blog"
 msgstr "Blog"
@@ -237,6 +237,10 @@ msgstr "Optionen für die Massenerfassung"
 msgid "Calculates waterfall analysis of liquidation preferences across all rounds"
 msgstr "Berechnet die Wasserfallanalyse der Liquidationspräferenzen über alle Runden hinweg"
 
+#: src/layouts/index.jsx:130
+msgid "Cap Table"
+msgstr "Cap Table"
+
 #: src/components/Feature.jsx:99
 #: src/pages/features.jsx:58
 msgid "Cap Table Management"
@@ -249,10 +253,6 @@ msgstr "Cap Table während der Finanzierungsrundensimulation"
 #: src/pages/pricing.jsx:18
 msgid "Cap table management"
 msgstr "Cap Table-Verwaltung"
-
-#: src/layouts/index.jsx:130
-msgid "Captable"
-msgstr ""
 
 #: src/layouts/index.jsx:112
 msgid "Career"
@@ -327,7 +327,7 @@ msgstr "In Transaktionen umwandeln"
 
 #: src/layouts/index.jsx:124
 msgid "Convertible Loans"
-msgstr ""
+msgstr "Convertible Loans"
 
 #: src/pages/pricing.jsx:25
 msgid "Convertibles"
@@ -429,7 +429,7 @@ msgstr "Mitarbeiterbeteiligung"
 
 #: src/layouts/index.jsx:119
 msgid "ESOP Templates"
-msgstr ""
+msgstr "ESOP Templates"
 
 #: src/pages/security.jsx:182
 msgid "EU data protection"
@@ -602,7 +602,7 @@ msgstr "Vermeide kostspielige Fehler"
 msgid "Get your cap table and employee participation plans right, from the beginning. Make your financing rounds a success and engage your investors and employees. Know your data is safe and compliant."
 msgstr "Erstelle deinen Cap Table und deine Mitarbeiterbeteiligungspläne von Anfang an richtig. Bringe deine Finanzierungsrunden zum Erfolg und motiviere deine Investoren und Mitarbeiter. Sei dir sicher, dass deine Daten gut aufgehoben sind."
 
-#: src/layouts/index.jsx:388
+#: src/layouts/index.jsx:363
 msgid "Get your cap table and employee participation plans right, from the beginning. Make your financing rounds a success and engage your investors and employees. Know your data is safe and compliant. Try now for free!"
 msgstr "Erstelle deinen Cap Table und Mitarbeiterbeteiligungspläne von Anfang an richtig. Bringe deine Finanzierungsrunden zum Erfolg und motiviere deine Investoren und Mitarbeiter. Sei unbesorgt, dass deine Daten sicher und konform sind. Jetzt kostenlos testen!"
 
@@ -631,7 +631,7 @@ msgstr "HTTP-Header verhindern Cross-Site-Scripting und Code-Injection (<0>A+-Ra
 msgid "Healthcare & technology venture capital since 2001"
 msgstr "Healthcare & technology venture capital since 2001"
 
-#: src/layouts/index.jsx:180
+#: src/layouts/index.jsx:175
 msgid "Help"
 msgstr "Hilfe"
 
@@ -740,7 +740,7 @@ msgstr "KPIs"
 
 #: src/layouts/index.jsx:125
 msgid "KPIs & Reports"
-msgstr ""
+msgstr "KPIs & Reports"
 
 #: src/pages/features/investors.jsx:112
 msgid "Keep an eye on your investments, their value and multiple"
@@ -762,7 +762,7 @@ msgstr "Key performance indicators"
 msgid "Kpi chart"
 msgstr "KPI-Diagramm"
 
-#: src/layouts/index.jsx:264
+#: src/layouts/index.jsx:239
 msgid "Language"
 msgstr "Sprache"
 
@@ -784,7 +784,7 @@ msgstr "Erfahre mehr über Dokumentenverwaltung"
 
 #: src/pages/webinars.jsx:17
 msgid "Ledgy Webinars"
-msgstr ""
+msgstr "Ledgy Webinaire"
 
 #: src/pages/features/modeling.jsx:129
 msgid "Ledgy makes it easy to simulate an investment with a pro-rata distribution"
@@ -794,7 +794,7 @@ msgstr "Ledgy macht es einfach, eine Investition mit einer pro-rata Verteilung z
 msgid "Ledgy scales with your needs. Free for startups, powerful for grown-ups."
 msgstr "Ledgy skaliert mit deinen Anforderungen. Kostenlos für Startups, leistungsstark für größere Firmen."
 
-#: src/layouts/index.jsx:222
+#: src/layouts/index.jsx:202
 msgid "Legal"
 msgstr "Legal"
 
@@ -884,7 +884,7 @@ msgstr "Upsala. Diese E-Mail-Adresse ist leider ungültig."
 
 #: src/layouts/index.jsx:123
 msgid "Option Pools"
-msgstr ""
+msgstr "Option Pools"
 
 #: src/layouts/team.jsx:61
 msgid "Oriol has a background in biotechnology and is passionate about any code-related matter, especially front-end development"
@@ -962,7 +962,7 @@ msgstr "Datenschutz made in Europe. Weil deine Beteiligungsdaten nicht jeder ken
 msgid "Pro-rata distribution"
 msgstr "Pro-rata Verteilung"
 
-#: src/layouts/index.jsx:207
+#: src/layouts/index.jsx:192
 msgid "Product"
 msgstr "Produkt"
 
@@ -1082,7 +1082,7 @@ msgstr "Demo ansehen"
 
 #: src/layouts/contentDiffusion.jsx:78
 msgid "See video"
-msgstr ""
+msgstr "Video sehen"
 
 #: src/pages/features/esop.jsx:139
 msgid "See your pools and employee participation grants in the cap table"
@@ -1214,7 +1214,7 @@ msgstr "Nutzungsbedingungen"
 msgid "The Ledgy Blog"
 msgstr "Der Ledgy-Blog"
 
-#: src/layouts/index.jsx:387
+#: src/layouts/index.jsx:362
 #: src/pages/index.jsx:25
 msgid "The New Standard in Equity Management"
 msgstr "Der Neue Standard des Equity Management"
@@ -1427,11 +1427,11 @@ msgstr "Uns ist bewusst, wie sensibel und vertraulich der Cap Table für jede Fi
 #: src/layouts/index.jsx:109
 #: src/pages/webinars.jsx:13
 msgid "Webinars"
-msgstr ""
+msgstr "Webinare"
 
 #: src/pages/webinars.jsx:14
 msgid "Webinars on cap tables, financing rounds, and legal issues around running and managing a startup."
-msgstr ""
+msgstr "Webinare zum Cap Table, Finanzierungsrunden und rechtlichen Fragen rund um das Leiten und Managen eines Startups."
 
 #: src/pages/features/investors.jsx:113
 msgid "Weekly email notifications if the startups publish new information"
@@ -1471,7 +1471,7 @@ msgstr "und Aktiennummerierung wird nativ unterstützt"
 msgid "by liquidation preferences"
 msgstr "durch Liquidationspräferenzen"
 
-#: src/layouts/index.jsx:396
+#: src/layouts/index.jsx:371
 msgid "cap table, stock ledger, share register, startup, modeling, financing round, equity, esop, phantom, option plan, virtual, portfolio, reporting, investors"
 msgstr "Cap Table, Aktienbuch, Aktienregister, Startup, Modellierung, Finanzierungsrunde, Exit, ESOP, VSOP, Beteiligungsplan, Unternehmensbeteiligung, Mitarbeiterbeteiligung, Optionspläne, virtuelle Beteiligung, Reporting, Investor, Portfolio"
 
